feat: add swagger documentation for subcategories
